# SimpleGraphicsLayer

./: CMakeLists.txt  README.md
code/: CMakeLists.txt  core.cpp  core.h  primitives.cpp  primitives.h  sgl_utilities.cpp  sgl_utilities.h  shaders.cpp  shaders.h  shaders_types.h
dependencies/: CMakeLists.txt
dependencies/SOIL/: CMakeLists.txt
dependencies/assimp-3.1.1/: .gitignore  revision.h
dependencies/assimp-3.1.1/code/: CMakeLists.txt
dependencies/glew-2.0.0/: CMakeLists.txt
dependencies/glfw-3.1.2/: CMakeLists.txt
dependencies/glm/include/glm/detail/: dummy.cpp
examples/: CMakeLists.txt
examples/skybox/: CMakeLists.txt  main.cpp
examples/triangle/: CMakeLists.txt  main.cpp
