cmake_minimum_required(VERSION 3.6)

#===============================================================================
# Settings
#===============================================================================
add_definitions(-DGLEW_STATIC)

#===============================================================================
# Packages
#===============================================================================
find_package(OpenGL REQUIRED)
include_directories(${OPENGL_INCLUDE_DIRS})

#===============================================================================
# Sources
#===============================================================================
set(SOURCE_FILES
        core.cpp
        shaders.cpp)

#===============================================================================
# Compilation
#===============================================================================
add_library(SGL STATIC ${SOURCE_FILES})

#===============================================================================
# Linking
#===============================================================================
target_link_libraries(SGL ${OPENGL_LIBRARIES})
target_link_libraries(SGL glew20)